day01-draw-triangle ndk-version;

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = "android-opengles"
 include ':base-library'
 
 include ':day01-draw-triangle:kotlin-version'
+include ':day01-draw-triangle:ndk-version'
