--- a/day01-draw-triangle/ndk-version/build.gradle
+++ b/day01-draw-triangle/ndk-version/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.ihubin.study.opengles.day01.kotlin"
+        applicationId "com.ihubin.study.opengles.day01.ndk"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -15,25 +15,26 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-//        externalNativeBuild {
-//            cmake {
-//                //cppFlags '-std=c++11'
-//                //arguments '-DANDROID_TOOLCHAIN=clang', '-DANDROID_ARM_MODE=arm', '-DANDROID_STL=c++_shared'
-//                cppFlags "-std=c++11 -frtti -fexceptions"
-//            }
-//        }
-//
-//        ndk {
-//            abiFilters "arm64-v8a", "armeabi-v7a"
-//            //abiFilters "armeabi-v7a"
-//        }
+        externalNativeBuild {
+            cmake {
+                //cppFlags '-std=c++11'
+                //arguments '-DANDROID_TOOLCHAIN=clang', '-DANDROID_ARM_MODE=arm', '-DANDROID_STL=c++_shared'
+                cppFlags "-std=c++11 -frtti -fexceptions"
+            }
+        }
+
+        ndk {
+            abiFilters "arm64-v8a", "armeabi-v7a"
+            //abiFilters "armeabi-v7a"
+        }
     }
 
-//    externalNativeBuild {
-//        cmake {
-//            path "src/main/cpp/CMakeLists.txt"
-//        }
-//    }
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.10.2"
+        }
+    }
 
     buildTypes {
         release {
